--- a/styles/styles.css
+++ b/styles/styles.css
@@ -199,14 +199,14 @@ svg * {
 }
 @font-face {
   font-family: "RubikGlitch-Regular";
-  src: url("/fonts/RubikGlitch-Regular.woff2") format("woff2");
+  src: url("../fonts/RubikGlitch-Regular.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Tektur-Condensed";
-  src: url("/fonts/Tektur-Condensed-SemiBold.woff2") format("woff2");
+  src: url("../fonts/Tektur-Condensed-SemiBold.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
