--- a/styles/blocks/_main.scss
+++ b/styles/blocks/_main.scss
@@ -12,13 +12,19 @@
     justify-content: space-between;
     flex-wrap: wrap;
   }
-
+  .mainFirst__wrapper{
+    border-bottom: rem(5) solid white;
+    padding-bottom: rem(22)
+  }
   &__subscribe {
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     border-bottom: 2px solid white;
+    @include mobile-s{
+      padding-top: 12px;
+    }
     &-text {
       font-family: 'Tektur-Condensed', sans-serif;
       font-weight: 400;
@@ -135,4 +141,34 @@
   display:flex;
   flex-direction: column;
   align-items: center;
+}
+
+.music-added img{
+
+  height: 25px;
+  width: 25px;
+}
+.music-added{
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  height: 35px;
+  width: 35px;
+  border: 1px solid rgb(255, 255, 255);
+  background-color: rgb(53, 51, 51);
+  border-radius:40px;
+  position:fixed;
+  right: 20px;        
+  bottom: 20px;       
+  z-index: 1000;      
+  animation: move 1s alternate infinite; 
+}
+
+
+@keyframes move{
+  0%{
+  }
+  100%{
+    transform: scale(1.2);
+  }
 }
