--- a/styles/blocks/_preloader.scss
+++ b/styles/blocks/_preloader.scss
@@ -4,14 +4,19 @@ body {
   background-color: #000000;
   background-size: 400% 400%;
   width: 100%;
-  height: 100vh;
+  height: 100%;
 }
+body.preloader-active, html.preloader-active{
+  position:fixed;
+  overflow: hidden;
+  height: 100vh;
+ }
 .preloader{
   position:fixed;
   font-family: 'Tektur-Condensed', sans-serif;
   font-weight: 400;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   background-color: black;
   color:rgb(255, 255, 255);
   display: flex;
