--- a/styles/styles.css
+++ b/styles/styles.css
@@ -199,14 +199,14 @@ svg * {
 }
 @font-face {
   font-family: "RubikGlitch-Regular";
-  src: url("../fonts/RubikGlitch-Regular.woff2") format("woff2");
+  src: url("/fonts/RubikGlitch-Regular.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Tektur-Condensed";
-  src: url("../fonts/Tektur-Condensed-SemiBold.woff2") format("woff2");
+  src: url("/fonts/Tektur-Condensed-SemiBold.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -398,6 +398,12 @@ body {
   background-color: #000000;
   background-size: 400% 400%;
   width: 100%;
+  height: 100%;
+}
+
+body.preloader-active, html.preloader-active {
+  position: fixed;
+  overflow: hidden;
   height: 100vh;
 }
 
@@ -405,8 +411,8 @@ body {
   position: fixed;
   font-family: "Tektur-Condensed", sans-serif;
   font-weight: 400;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   background-color: black;
   color: rgb(255, 255, 255);
   display: flex;
@@ -481,6 +487,11 @@ body {
   z-index: 10;
 }
 
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 body {
   display: flex;
   flex-direction: column;
@@ -513,12 +524,21 @@ footer {
   justify-content: space-between;
   flex-wrap: wrap;
 }
+.main .mainFirst__wrapper {
+  border-bottom: 0.3125rem solid white;
+  padding-bottom: 1.375rem;
+}
 .main__subscribe {
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   border-bottom: 2px solid white;
+}
+@media (width <= 34.06125rem) {
+  .main__subscribe {
+    padding-top: 12px;
+  }
 }
 .main__subscribe-text {
   font-family: "Tektur-Condensed", sans-serif;
@@ -652,6 +672,33 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.music-added img {
+  height: 25px;
+  width: 25px;
+}
+
+.music-added {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 35px;
+  width: 35px;
+  border: 1px solid rgb(255, 255, 255);
+  background-color: rgb(53, 51, 51);
+  border-radius: 40px;
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  z-index: 1000;
+  animation: move 1s alternate infinite;
+}
+
+@keyframes move {
+  100% {
+    transform: scale(1.2);
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
